crates/pg_syntax/tests/snapshots/postgres_regress/text@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('Hello');"
---
SelectStmt@0..23
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..21
    FuncCall@7..21
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..21
        Sconst@14..21 "'Hello'"
  Ascii41@21..22 ")"
  Ascii59@22..23 ";"

