crates/pg_syntax/tests/snapshots/postgres_regress/text@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('Hello %s');"
---
SelectStmt@0..26
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..24
    FuncCall@7..24
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..24
        Sconst@14..24 "'Hello %s'"
  Ascii41@24..25 ")"
  Ascii59@25..26 ";"

