crates/pg_syntax/tests/snapshots/postgres_regress/text@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('Hello %x', 20);"
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    FuncCall@7..28
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..24
        Sconst@14..24 "'Hello %x'"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..28
        Iconst@26..28 "20"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

