crates/pg_syntax/tests/snapshots/postgres_regress/text@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('%s%s%s','Hello', NULL,'World');"
---
SelectStmt@0..46
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..22
        Sconst@14..22 "'%s%s%s'"
      Ascii44@22..23 ","
      AConst@23..30
        Sconst@23..30 "'Hello'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..36
        NullP@32..36 "NULL"
      Ascii44@36..37 ","
      AConst@37..44
        Sconst@37..44 "'World'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

