crates/pg_syntax/tests/snapshots/postgres_regress/text@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('INSERT INTO %I VALUES(%L,%L)', 'mytab', 10, NULL);"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..63
    FuncCall@7..63
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..44
        Sconst@14..44 "'INSERT INTO %I VALUE ..."
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..53
        Sconst@46..53 "'mytab'"
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..57
        Iconst@55..57 "10"
      Ascii44@57..58 ","
      Whitespace@58..59 " "
      AConst@59..63
        NullP@59..63 "NULL"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

