crates/pg_syntax/tests/snapshots/postgres_regress/text@37.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('INSERT INTO %I VALUES(%L,%L)', 'mytab', NULL, 'Hello');"
---
SelectStmt@0..70
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..68
    FuncCall@7..68
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..44
        Sconst@14..44 "'INSERT INTO %I VALUE ..."
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..53
        Sconst@46..53 "'mytab'"
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..59
        NullP@55..59 "NULL"
      Ascii44@59..60 ","
      Whitespace@60..61 " "
      AConst@61..68
        Sconst@61..68 "'Hello'"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

