crates/pg_syntax/tests/snapshots/postgres_regress/text@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('%1$s %12$s', 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..65
    FuncCall@7..65
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..26
        Sconst@14..26 "'%1$s %12$s'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..29
        Iconst@28..29 "1"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..32
        Iconst@31..32 "2"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..35
        Iconst@34..35 "3"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..38
        Iconst@37..38 "4"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..41
        Iconst@40..41 "5"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..44
        Iconst@43..44 "6"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..47
        Iconst@46..47 "7"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..50
        Iconst@49..50 "8"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      AConst@52..53
        Iconst@52..53 "9"
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..57
        Iconst@55..57 "10"
      Ascii44@57..58 ","
      Whitespace@58..59 " "
      AConst@59..61
        Iconst@59..61 "11"
      Ascii44@61..62 ","
      Whitespace@62..63 " "
      AConst@63..65
        Iconst@63..65 "12"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

