crates/pg_syntax/tests/snapshots/postgres_regress/text@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('%0$s', 'Hello');"
---
SelectStmt@0..31
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..20
        Sconst@14..20 "'%0$s'"
      Ascii44@20..21 ","
      Whitespace@21..22 " "
      AConst@22..29
        Sconst@22..29 "'Hello'"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

